--- a/index.html
+++ b/index.html
@@ -21,14 +21,15 @@
   
       <div class="container py-0 my-0 ">
         <div class="main d-flex row pb-0 justify-content-around">
-          <div class="clockarea ms-3 col-lg-5 d-none d-md-block ">
+          <!-- pc版出現時鐘 -->
+          <div class="clockarea ms-3 col-lg-4 d-none d-md-block ">
             <div class="clock-lg mt-4 m-auto">
                 <div class="center-lg "></div>
                 <div class="hourP-lg"></div>
                 <div class="minsP-lg"></div>
                 <div class="secP-lg"></div>
             </div>
-        </div>
+          </div>
           <div class="clockarea col-12 col-lg-5  d-md-none">
               <div class="clock mt-2 m-auto">
                   <div class="center"></div>
@@ -37,8 +38,8 @@
                   <div class="secP"></div>
               </div>
           </div>
-          <div class="todolist ms-3 ms-lg-0 mb-5 col-12 col-lg-5" style="z-index:999" >
-            <div class="title fs-2 my-3">TODO LIST</div>
+          <div class="todolist ms-3 ms-lg-0 mb-5 col-12 col-lg-6" style="z-index:999" >
+            <div class="title fs-2 mt-4">TODO LIST</div>
             <!-- add -->
             <div class="addInput container boxStyle mb-2">
               <input class="inputText" type="text" placeholder="新增代辦事項">
